# openapi/main.yaml
@@ -391,6 +391,28 @@ paths:
                    $ref: '#/components/schemas/DemandDTO'
         '404':
           description: Not found
+  /api/admin/demands/CountPendingDemands:
+    get:
+      tags:
+        - "Demand"
+      summary: "Get the number of pending demands"
+      description: "Get the number of pending demands"
+      operationId: getPendingDemandsNumber
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: string
+                    example: "5"
+        '404':
+          description: Not found
+        '403':
+          description: Unauthorized
   /api/admin/createresource:
     post:
       tags:
